--- a/src/app/components/styles/components/groups.less
+++ b/src/app/components/styles/components/groups.less
@@ -21,6 +21,9 @@
     vertical-align: top;
     border: 1px solid #020202;
     .border-radius();
+    @media only screen and (max-width: 723px) {
+      width: 100%;
+    }
     ul {
       display: inline-block;
       li {
