user info style changes

--- a/src/app/components/styles/components/users.less
+++ b/src/app/components/styles/components/users.less
@@ -59,6 +59,18 @@
   }
 }
 
+.user-group-item {
+  display: inline-block;
+  margin: 5px;
+  padding: 5px;
+  background-color: #dfeaf1;
+  .border-radius(5px);
+  a {
+    text-decoration: none;
+    color: #020202;
+  }
+}
+
 .rw-dropdownlist {
   margin: 0 auto 10px;
   width: 200px;
