--- a/src/app/components/styles/components/groups.less
+++ b/src/app/components/styles/components/groups.less
@@ -11,6 +11,9 @@
   }
   .add-group-submit-button {
     display: inline-block;
+    @media only screen and (max-width: 638px) {
+      width: 100%;
+    }
   }
 }
 .group-list {
