add user to group bug fix

--- a/src/app/components/styles/components/groups.less
+++ b/src/app/components/styles/components/groups.less
@@ -5,6 +5,7 @@
   padding-top: 60px;
   width: 300px;
   text-align: center;
+  .font();
   @media only screen and (max-width: 638px) {
     margin: 0 auto;
     width: 100%;
@@ -20,6 +21,7 @@
   margin: 60px auto 0px;
   padding: 20px;
   text-align: center;
+  .font();
   .group-list-item {
     display: inline-block;
     margin: 0px 10px 30px 10px;
