--- a/src/app/components/styles/base.less
+++ b/src/app/components/styles/base.less
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Oswald:400,700);
 @import './components/navbar';
 @import './components/home';
 @import './components/users';
