--- a/src/app/components/styles/components/helpers.less
+++ b/src/app/components/styles/components/helpers.less
@@ -1,3 +1,7 @@
+.font(@font: 'Oswald') {
+  font-family: 'Oswald', sans-serif;
+}
+
 .border-radius(@radius: 3px) {
   -webkit-border-radius: @radius;
      -moz-border-radius: @radius;
