group list style updates

--- a/src/app/components/styles/components/groups.less
+++ b/src/app/components/styles/components/groups.less
@@ -41,6 +41,14 @@
     .group-list-buttons {
       text-align: center;
     }
+    .group-list-user {
+      display: inline-block;
+      margin: 5px;
+      padding: 5px;
+      background-color: #dfeaf1;
+      .border-radius(5px);
+      cursor: pointer;
+    }
     ul {
       text-align: left;
       li {
