--- a/src/app/components/styles/components/users.less
+++ b/src/app/components/styles/components/users.less
@@ -5,6 +5,7 @@
   margin-right: 25px;
   padding-top: 60px;
   width: 30%;
+  .font();
   text-align: center;
   @media only screen and (max-width: 638px) {
     margin: 0 auto;
@@ -25,6 +26,7 @@
   margin-left: 60px;
   padding-top: 60px;
   width: 60%;
+  .font();
   @media only screen and (max-width: 638px) {
     margin: 0 auto;
     width: 100%;
@@ -65,6 +67,7 @@
   padding: 5px;
   background-color: #dfeaf1;
   .border-radius(5px);
+  .font();
   a {
     text-decoration: none;
     color: #020202;
